# schemachange

./: README.md
schemachange/: cli.py  deploy.py  job.py
schemachange/config/: DeployConfig.py  JobConfig.py  Plugin.py  PluginConfig.py  get_merged_config.py  parse_cli_args.py
schemachange/plugins/schemachange_sqlutil/: pyproject.toml
schemachange/plugins/schemachange_sqlutil/src/: schemachange_sqlutil.py
schemachange/session/: SnowflakeSession.py
